trying to Fix image sizees on smaller screens (mobile)

--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   }
 }
 
+img {
+    max-width: 70%;
+    max-height: 70%;
+}
+
 
 .home {
     margin: 0;
